tests/Errors/Comment.jack
class Comment {
    field int x /*;
    static char c, d;
}
